# zephyr

./: CMakeLists.txt  example.txt  hello.llext  notes.txt  west.yml
arch/arc/core/: CMakeLists.txt  elf.c
arch/arc/core/mpu/: arc_mpu_common_internal.h  arc_mpu_v2_internal.h
arch/arm/core/: elf.c
arch/arm/core/cortex_a_r/: thread.c
arch/arm/core/cortex_m/: thread.c
arch/xtensa/core/: coredump.c  fatal.c  xtensa-asm2-util.S  xtensa-asm2.c
boards/snps/nsim/arc_classic/: nsim_nsim_vpx5.yaml
cmake/bintools/arcmwdt/: elfconvert_command.cmake  target_bintools.cmake
cmake/compiler/arcmwdt/: target.cmake
cmake/modules/: extensions.cmake
doc/security/: hardening-tool.rst  secure-coding.rst  sensor-threat.rst
doc/services/debugging/: coredump.rst
doc/services/llext/: config.rst
drivers/sensor/: default_rtio_sensor.c  sensor_shell.c
drivers/sensor/amd_sb_tsi/: sb_tsi_emul.c
drivers/sensor/asahi_kasei/akm09918c/: akm09918c_decoder.c  akm09918c_emul.c
drivers/sensor/bosch/bma4xx/: bma4xx.c
drivers/sensor/bosch/bme280/: bme280.c  bme280.h  bme280_async.c  bme280_decoder.c
drivers/sensor/bosch/bmi160/: emul_bmi160.c
drivers/sensor/f75303/: f75303_emul.c
drivers/sensor/fxos8700/: fxos8700.c
drivers/sensor/memsic/: CMakeLists.txt
drivers/sensor/memsic/mc3419/: mc3419.h
drivers/sensor/memsic/mmc56x3/: Kconfig  mmc56x3.c  mmc56x3_async.c  mmc56x3_decoder.c
drivers/sensor/tdk/icm42688/: icm42688_decoder.c  icm42688_emul.c
dts/bindings/sensor/: memsic,mmc56x3.yaml
include/zephyr/arch/arc/: elf.h
include/zephyr/arch/arc/v2/: linker.ld
include/zephyr/arch/xtensa/: arch.h
include/zephyr/drivers/: emul_sensor.h  sensor.h  sensor_data_types.h
include/zephyr/llext/: elf.h  heap.h  k_heap.h  llext.h  sys_mem_blocks_heap.h
include/zephyr/sys/: util_macro.h
kernel/: fatal.c  sched.c  sem.c  thread.c
modules/: Kconfig  Kconfig.tensorflow
samples/: index.rst
samples/cpp_synchronization/: prj.conf
samples/cpp_synchronization/src/: main.cpp
samples/hello_world/: prj.conf
samples/hello_world/src/: fixedptc.h  main.c
samples/modules/tensorflow/magic_wand/: prj.conf
samples/modules/tensorflow/magic_wand/boards/: disco_l475_iot1.conf  frdm_k64f.conf
samples/modules/tensorflow/magic_wand/src/: accelerometer_handler.cc  magic_wand_model_data.cc  magic_wand_model_data.cc.new  main_functions.cc
samples/modules/tensorflow/magic_wand/train/: data_prepare.py  data_split_person.py  (+2 more)
samples/sensor/bme280/: prj.conf
samples/sensor/bme280/boards/: frdm_k64f.overlay
samples/sensor/bme280/src/: main.c
samples/sensor/dht_polling/: prj.conf
samples/sensor/dht_polling/boards/: frdm_k64f.overlay
samples/sensor/dht_polling/src/: main.c
samples/sensor/fxos8700/: prj.conf
samples/sensor/fxos8700/src/: main.c
samples/sensor/lsm6dsl/src/: main.c
samples/sensor/mmc56x3/: Kconfig  README.rst  arduino_i2c.overlay  prj.conf  sample.yaml
samples/sensor/mmc56x3/src/: main.c
samples/sensor/sensor_shell/boards/: frdm_k64f.overlay
samples/subsys/llext/shell_loader/: prj.conf
samples/tensorflow/: tensorflow.rst
samples/tensorflow/hello_world/: CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml
samples/tensorflow/hello_world/src/: main.cc  main_functions.cc  output_handler.h
samples/tensorflow/magic_wand/: CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml
samples/tensorflow/magic_wand/boards/: frdm_k64f.conf
samples/tensorflow/magic_wand/src/: accelerometer_handler.cc  accelerometer_handler.h  main_functions.cc  output_handler.h
samples/tensorflow/magic_wand/train/: train.py  train_magic_wand_model.ipynb
samples/tensorflow/renode/: litex-vexriscv-tflite.resc
scripts/coredump/: coredump_gdbserver.py
scripts/coredump/gdbstubs/: __init__.py
scripts/coredump/gdbstubs/arch/: xtensa.py
scripts/kconfig/: hardenconfig.py  hardened.csv
soc/xtensa/intel_adsp/tools/: cavstool.py  cavstool_client.py  remote-fw-service.py
subsys/llext/: CMakeLists.txt  Kconfig  k_heap.c  llext.c  llext_experimental.c  llext_export.c  llext_load.c  llext_mem.c  llext_priv.h  memblk_heap.c  sys_mem_blocks_heap.c
tests/CPP_TEST/: CMakeLists.txt  prj.conf  testcase.yaml
tests/CPP_TEST/src/: main.cpp
tests/subsys/llext/: CMakeLists.txt  prj.conf  sys_mem_blocks.conf  testcase.yaml
tests/subsys/llext/boards/: nsim_nsim_vpx5.conf
tests/subsys/llext/hello_phil/: CMakeLists.txt  hello_phil.c
tests/subsys/llext/hello_world/: hello_world.c
tests/subsys/llext/hello_world/src/llext/: hello_world.c
tests/subsys/llext/hello_world/src/test/: test_llext_simple.c
tests/subsys/llext/philosophers/: CMakeLists.txt  main.c
tests/subsys/llext/simple/: CMakeLists.txt  prj.conf
tests/subsys/llext/simple/boards/: qemu_arc_qemu_arc_em.conf
tests/subsys/llext/simple/src/: test_llext_simple.c  threads_kernel_objects_ext.c
tests/subsys/llext/src/: syscalls_ext.c  test_llext.c  test_llext_simple.c
(+3 files in other folders)
